# bitloom-core

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
config/: i2c_master_config.h
doc/: README-scheduler
examples/: blinktask.c  blinktask.h  config.h  example.c
include/: i2c_master.h  scheduler.h
include/core/: i2c_master.h  scheduler.h  uart.h
include/hal/: i2c.h  pin_digital_io.h  timer.h  uart.h  uart_hal.h
src/i2c_master/: CMakeLists.txt  i2c_master.c
src/scheduler/: CMakeLists.txt  scheduler.c
src/uart/: CMakeLists.txt  uart.c
templates/: scheduler_config.h  timer_config.h  uart_config.h
tests/: CMakeLists.txt  Makefile  config.h  test_main.c
tests/config/: i2c_master_config.h  scheduler_config.h  timer_config.h
tests/i2c_master/: i2cMasterTest.cpp  test_i2c_master.c
tests/mocks/: fake_timer.c  fake_timer.h  i2c_mock.c  i2c_mock.cpp  i2c_mock.h  pin_digital_io_stub.c  pin_digital_io_stub.h  spy_task.c  spy_task.h  timer_mock.cpp
tests/pin_digital_io/: test_pin_digital_io.c
tests/scheduler/: SchedulerTest.cpp  test_fake_timer.c  test_scheduler.c  test_spy_task.c
tests/test_hal/: test_timer.c
